syntax="proto3";

package chat_server_v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/dbulyk/chat_server/pkg/chat_server_v1;chat_server_v1";

service ChatServerV1 {
  rpc CreateChat(CreateChatRequest) returns (CreateChatResponse);
  rpc AddUserToChat(AddUserToChatRequest) returns (google.protobuf.Empty);
  rpc DeleteChat(DeleteChatRequest) returns (google.protobuf.Empty);
  rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
}

message CreateChatRequest {
  repeated int64 userIds = 1; // id пользователей
  string title = 2; // название чата
}

message AddUserToChatRequest {
  repeated int64 userIds = 1;
}

message CreateChatResponse {
  int64 id = 1;
}

message DeleteChatRequest {
  int64 id = 1;
}

message SendMessageRequest {
  string form = 1;
  string text = 2;
  google.protobuf.Timestamp timestamp = 3;
}
